# YOLO_Trainer

./: AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-pyside6-desktop-gui.md  0002-pretrained-yolo-fine-tuning.md  0003-fixed-8-bit-normalization.md  0004-windows-pip-venv-cuda-setup.md
docs/agents/: domain.md
src/yolo_trainer/: __init__.py  __main__.py  annotations.py  app.py  dataset_export.py  image_import.py  prediction.py  project.py  training.py  training_worker.py
tests/: test_annotations.py  test_app_smoke.py  test_dataset_export.py  test_documentation_foundation.py  test_image_import.py  test_prediction.py  test_prediction_gui.py  test_project_gui.py  test_project_store.py  test_training_gui.py
